<resources>
    <string name="app_name">Iwallpapers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">تنظیمات</string>
    <string name="search">جستجو</string>
    <string name="home">والپیپرها</string>
    <string name="last_wallpapers">جدیدترین ها</string>
    <string name="hint_in_piranshahryar">جستجو در میان والپیپر ها</string>
    <string name="error_in_get_data">خطا در دریافت اطلاعات</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="added_to_favorites">به لیست علاقه مندی ها اضافه گردید</string>
    <string name="removed_from_favorites">از لیست علاقه مندی ها حذف گردید</string>
    <string name="error_in_save">خطا در اضافه کردن به لیست علاقه مندی ها</string>
    <string name="error_in_delet">خطا در حذف کردن آیتم از لیست علاقه مندی ها</string>
    <string name="downloading">در حال دانلود والپیپر از اپلیکیشن Iwallpapers</string>
    <string name="error_permission">دسترسی اپلیکیشن به خافظه گوشی بسته است</string>
    <string name="download_complete">دانلود به اتمام رسید</string>
    <string name="set_wallpaper_succesfuly">تصویر زمینه تغییر کرد</string>
    <string name="error_set_wallpaper">خطا در تغییر تصویر پس زمینه</string>
    <string name="error_download">خطا در بارگذاری فایل</string>
    <string name="transitionName">iwallpapers</string>
    <string name="please_Wait">لطفا منتظر بمانید...</string>
    <string name="color_pallete">پالت رنگ</string>
    <string name="category">دسته بندی</string>
    <string name="unknownError">خطای ناشناخته</string>
    <string name="text_copied">در حافظه کپی شد</string>
    <string name="Dimensions">ابعاد:</string>
    <string name="wallpaper_extension">قالب:</string>
    <string name="total_views">تعداد دفعات مشاهده شده توسط کاربران:</string>
    <string name="wallpaper_count">والپیپر</string>
    <string name="app_version">نسخه:</string>
    <string name="favorites">مورد علاقه</string>
    <string name="about">درباره</string>
    <string name="share_app">به اشتراک گذاری برنامه</string>
    <string name="reate_and_review">امتیاز به برنامه</string>
    <string name="favorites_empty">لیست علاقه مندی ها خالی است</string>
    <string name="about_app">آی والپیپرز یک سرویس متن باز تحت لایسنس آپاچی برای بخشیدن ظاهری تازه به موبایل شما است که در قالب یک پروژه تمرینی تعطیلات تابستان توسعه داده شده و در حال حاظر سورس آن بر روی گیت هاب موجود است و می توانید به صورت رایگان از آن استفاده کنید.</string>
    <string name="application_github">سورس گیتهاب</string>
    <string name="send_fedback">ارسال بازخورد اپلیکیشن</string>
    <string name="developer_weblog">وبلاگ توسعه دهنده</string>
    <string name="designed_developed_by">DESIGNED AND DEVELOPED BY</string>
    <string name="developer_name">Baset Esmaeili</string>
</resources>
