<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/about_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="28sp"
                app:fontFamily="@font/segoescb"
                android:layout_marginTop="18dp"/>
            <TextView
                android:id="@+id/about_app_version"
                android:layout_below="@id/about_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="نسخه: ۱.۰.۵"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                android:background="@drawable/bg_about_app_version"
                android:layout_centerHorizontal="true"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/about_description_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:layout_below="@id/about_app_version"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="18sp"
                android:lineSpacingExtra="12dp"/>
<TextView
    android:id="@+id/about_github_source"
    android:layout_below="@id/about_description_app"
    android:layout_marginTop="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/application_github"
    android:layout_centerHorizontal="true"
    android:textSize="18sp"
    android:onClick="onClick"
    android:textColor="@android:color/white"
    android:background="@drawable/bg_btn_about_btn"
  android:padding="9dp"
    android:clickable="true"
    android:gravity="center"
    android:drawableLeft="@drawable/ic_chevron_left_white_24dp"/>
            <TextView
                android:id="@+id/about_developer_website"
                android:layout_below="@id/about_github_source"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_weblog"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_btn_about_btn"
                android:padding="9dp"
                android:clickable="true"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_chevron_left_white_24dp"/>
            <TextView
                android:id="@+id/about_send_feedback"
                android:layout_below="@id/about_developer_website"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_fedback"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_btn_about_btn"
                android:padding="9dp"
                android:clickable="true"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_chevron_left_white_24dp"/>
<TextView
    android:id="@+id/about_developed_by"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/designed_developed_by"
    android:layout_below="@id/about_send_feedback"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_developed_by"
                android:text="@string/developer_name"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>